cluster-b/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nf-b-namespace
  labels:
    istio-injection: enabled
