cluster-b/namespace-nf-b.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nf-b-namespace
  labels:
    istio-injection: enabled
    name: nf-b-namespace
