cluster-b/veramo-nf-b-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: veramo-nf-b-nodeport
  namespace: nf-b-namespace
spec:
  type: NodePort
  selector:
    app: nf-b
  ports:
  - name: http
    protocol: TCP
    port: 7002
    targetPort: 7002
    nodePort: 30700
