cluster-b/cross-cluster-serviceentry.yaml
# ServiceEntry: Route veramo-nf-a.nf-a-namespace to Cluster-A Gateway
# This allows NF-B to reach NF-A's Veramo sidecar via mTLS through Istio Gateways

apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: veramo-nf-a-external
  namespace: nf-b-namespace
spec:
  hosts:
  - veramo-nf-a.nf-a-namespace.svc.cluster.local
  addresses:
  - 240.0.0.2  # Virtual IP for routing
  ports:
  - number: 3001
    name: http-veramo
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
  - address: 172.23.0.3  # Cluster-A control-plane IP (fixed)
    ports:
      http-veramo: 32514  # Cluster-A Ingress Gateway HTTP NodePort

---
# DestinationRule for mTLS to Cluster-A via veramo-nf-a hostname
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: veramo-nf-a-mtls
  namespace: nf-b-namespace
spec:
  host: veramo-nf-a.nf-a-namespace.svc.cluster.local
  trafficPolicy:
    tls:
      mode: MUTUAL
      credentialName: cluster-a-client-certs
      sni: cluster-a.external
    connectionPool:
      http:
        h2UpgradePolicy: UPGRADE
