cluster-b/istio-destinationrule-didcomm.yaml
# Cluster B - DestinationRule für Veramo Service
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: veramo-nf-b-didcomm-dr
  namespace: nf-b-namespace
spec:
  host: veramo-nf-b.nf-b-namespace.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
