cluster-b/istio-authz-policy-didcomm.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: veramo-nf-b-didcomm-policy
  namespace: nf-b-namespace
spec:
  selector:
    matchLabels:
      app: nf-b
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/nf-a-namespace/sa/default"
        - "cluster.local/ns/nf-b-namespace/sa/default"
    to:
    - operation:
        methods: ["POST", "GET"]
        paths: ["/messaging*", "/didcomm*", "/veramo*"]
